--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,13 +3,13 @@
 # # Documentation: https://docs.hugoblox.com/
 # # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-# # Appearance
+ # Appearance
 
-# appearance:
-#   theme_day: minimal
-#   theme_night:
-#   font: native
-#   font_size: L
+ appearance:
+   theme_day: minimal
+   theme_night:
+   font: native
+   font_size: L
 
 # # SEO
 
