--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -11,23 +11,23 @@
    font: native
    font_size: L
 
-# # SEO
+# SEO
 
-# marketing:
-#   seo:
-#     site_type: Organization
-#     local_business_type: ''
-#     org_name: ''
-#     description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-#     twitter: 'GetResearchDev'
-#   analytics:
-#     google_analytics: ''
-#     baidu_tongji: ''
-#     google_tag_manager: ''
-#     microsoft_clarity: ''
-#   verification:
-#     google: ''
-#     baidu: ''
+marketing:
+  seo:
+    site_type: Organization
+    local_business_type: ''
+    org_name: ''
+    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
+    twitter: 'GetResearchDev'
+  analytics:
+    google_analytics: ''
+    baidu_tongji: ''
+    google_tag_manager: ''
+    microsoft_clarity: ''
+  verification:
+    google: ''
+    baidu: ''
 
 # # Site header
 
@@ -54,10 +54,10 @@
 
 # # Localization
 
-# locale:
-#   date_format: 'Jan 2, 2006'
-#   time_format: '3:04 PM'
-#   address_format: en-us
+locale:
+  date_format: 'Jan 2, 2006'
+  time_format: '3:04 PM'
+  address_format: en-us
 
 # # Site features
 
