--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,47 +1,47 @@
-# # SITE SETUP
-# # Guide: https://docs.hugoblox.com/tutorial/
-# # Documentation: https://docs.hugoblox.com/
-# # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
+# SITE SETUP
+# Guide: https://docs.hugoblox.com/tutorial/
+# Documentation: https://docs.hugoblox.com/
+# This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
- # Appearance
+# Appearance
 
- appearance:
-   theme_day: minimal
-   theme_night:
-   font: native
-   font_size: L
+appearance:
+  theme_day: minimal
+  theme_night:
+  font: native
+  font_size: L
 
 # SEO
 
-# marketing:
-#   seo:
-#     site_type: Organization
-#     local_business_type: ''
-#     org_name: ''
-#     description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-#     twitter: 'GetResearchDev'
-#   analytics:
-#     google_analytics: ''
-#     baidu_tongji: ''
-#     google_tag_manager: ''
-#     microsoft_clarity: ''
-#   verification:
-#     google: ''
-#     baidu: ''
+marketing:
+  seo:
+    site_type: Organization
+    local_business_type: ''
+    org_name: ''
+    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
+    twitter: 'GetResearchDev'
+  analytics:
+    google_analytics: ''
+    baidu_tongji: ''
+    google_tag_manager: ''
+    microsoft_clarity: ''
+  verification:
+    google: ''
+    baidu: ''
 
-# # Site header
+# Site header
 
- header:
-   navbar:
-     enable: true
-     align: r
-     show_logo: true
-     show_language: false
-     show_day_night: true
-     show_search: true
-     highlight_active_link: false
+header:
+  navbar:
+    enable: true
+    align: r
+    show_logo: true
+    show_language: true
+    show_day_night: true
+    show_search: false
+    highlight_active_link: false
 
-# # Site footer
+# Site footer
 
 # footer:
 #   copyright:
@@ -52,23 +52,23 @@
 #       share_alike: true
 #       allow_commercial: false
 
-# # # Localization
+# Localization
 
-# locale:
-#   date_format: 'Jan 2, 2006'
-#   time_format: '3:04 PM'
-#   address_format: en-us
+locale:
+  date_format: 'Jan 2, 2006'
+  time_format: '3:04 PM'
+  address_format: en-us
 
-# # Site features
+# Site features
 
 features:
   syntax_highlighter:
-    enable: true
+    enable: false
     extra_languages:
       - r
       - latex
   math:
-    enable: ture
+    enable: false
   privacy_pack:
     enable: false
   repository:
@@ -111,20 +111,8 @@ extensions:
   academicons:
     enable: true
 
- # Citation style
+# Citation style
 
- publications:
-   date_format: January 2006
-   citation_style: apa
-   show_date: true
-
- sharing:
-   publication: false
-   post: false
-  
-params:
-  customJS:
-    - js/custom.js
-    - js/custom-author-star.js
-    - js/test-not-exist.js
-
+publications:
+  date_format: January 2006
+  citation_style: apa
