--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -8,4 +8,4 @@ imports:
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-decap-cms
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-bootstrap/v5
-
+    version: "v5.9.8"
