--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,12 +13,12 @@ main:
   - name: Team
     url: people
     weight: 20
-#  - name: Events
-#    url: event
-#    weight: 40
+  - name: Invited Talk
+    url: event
+    weight: 30
   - name: Publications
     url: publication
-    weight: 30
+    weight: 40
   - name: Contact
     url: contact
-    weight: 40
+    weight: 50
