--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,6 @@ main:
   - name: Contact
     url: contact
     weight: 50
-  - name: Testview
-    url: testview
+  - name: Team Capabilities & Equipments
+    url: equipments
     weight: 60
