--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseURL = "https://widebandgap.github.io/"
-#baseURL = "https://ethan-zhang-hku.github.io/"
+baseURL = "https://ethan-zhang-hku.github.io/"
 languageCode = "en-us"
 title = "My Site"
 # relativeURLs = true
